Lobby: store DE Connector socket addr
